kubernetes/base/apps/self-hosted/mealie/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  labels:
    app: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:v3.13.1
        ports:
          - containerPort: 9000
            name: http-mealie
        resources:
          requests:
            cpu: 5m
            memory: 256Mi
          limits:
            memory: 512Mi
