kubernetes/base/apps/self-hosted/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
  annotations:
    gethomepage.dev/description: Recipes Library
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Home
    gethomepage.dev/icon: mealie.png
    gethomepage.dev/name: Mealie
    gethomepage.dev/pod-selector: "app=mealie"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: mealie.internal
spec:
  tls:
    - hosts:
      - mealie.internal
      secretName: mealie-ing-cert
  ingressClassName: nginx
  rules:
  - host: mealie.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie
            port:
              number: 9000
